--- a/WpfUI/MainWindow.xaml
+++ b/WpfUI/MainWindow.xaml
@@ -18,6 +18,7 @@
                 </MenuItem>
                 <MenuItem Header="_Tools">
                     <MenuItem Name="RemoveExcessWordsMenu" Header="_Remove excess words" Click="RemoveExcessWordsMenu_Click" />
+                    <MenuItem Name="ResetWordsLevelMenu" Header="_Reset words level" Click="ResetWordsLevelMenu_Click"/>
                 </MenuItem>
                 <MenuItem Header="_Help">
                     <MenuItem Name="ResetPassword" Header="_Reset password" Click="ResetPassword_Click"/>
