--- a/TewCloud/Views/Shared/DownloadView.cshtml
+++ b/TewCloud/Views/Shared/DownloadView.cshtml
@@ -1,3 +1,3 @@
-﻿<div>
-    <h1>DOWNLAOD</h1>
+﻿<div class="link-text">
+    <a href="https://www.dropbox.com/s/7kuyfxhex0c9dq6/Tew%281.0%29.rar">TEW v1.0 (10/10/2014)</a>
 </div>
