--- a/TewCloud/Views/Shared/_Layout.cshtml
+++ b/TewCloud/Views/Shared/_Layout.cshtml
@@ -14,5 +14,8 @@
     <div class="row">
         @RenderBody()
     </div>
+    <div class="row" id="footer">
+        <br/><br /><br /><br /><br /><br />
+    </div>
 </body>
 </html>
