--- a/TewCloud/Views/Tew/Index.cshtml
+++ b/TewCloud/Views/Tew/Index.cshtml
@@ -4,17 +4,30 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 <div class="row center-block main-text">
-    <h2 class="title-text">TEW</h2>
+    <div class="jumbotron header-with-image">
+        <div class="title-text big-size-text">Trainer of english words</div>
+        <h2 class="title-text">Improve your english now!</h2>
+    </div>
 
     <div id="statContainer">
         
         <div class="stat-block">
-            <div id="userCount"></div>
-            <div id="wordsCount"></div>
+            <div id="userBlock">
+                <img src="~/Content/Images/multy-user.png" class="icons"/>
+                <span id="userCount"></span>
+            </div>
+            <div id="wordsBlock">
+                <img src="~/Content/Images/words.png" class="icons" />
+                <span id="wordsCount"></span>
+            </div>
         </div>
 
-        <a href="#download" style="color: #00bfff" class="link-text">Download</a>
+        <div id="downdLoadBlock">
+            <img src="~/Content/Images/downloadButton.jpg" class="download-icon" id="downloadButton"/>
+        </div>
+
     </div>
 
     <div id="loadingContainer" style="text-align: center" class="display-none">
@@ -31,6 +44,5 @@
 <div id="download" class="row center-block main-text">
     @Html.Partial("DownloadView")
 </div>
-
 
 @Scripts.Render("~/bundles/tewScripts")
