added irregular verbs page

--- a/TewCloud/Views/Tew/Index.cshtml
+++ b/TewCloud/Views/Tew/Index.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="row center-block main-text">
-    <div class="jumbotron header-with-image">
+    <div class="jumbotron header-with-image" id="indexHeader">
         <div class="title-text big-size-text">Trainer of english words</div>
         <h2 class="title-text">Improve your english now!</h2>
     </div>
