--- a/TewCloud/Views/Shared/DownloadView.cshtml
+++ b/TewCloud/Views/Shared/DownloadView.cshtml
@@ -1,3 +1,3 @@
 ﻿<div class="link-text">
-    <a href="https://www.dropbox.com/s/zymhf6hw5abamkf/Tew%20%281.05%29.rar">TEW v1.05 (11/29/2014)</a>
+    <a href="https://www.dropbox.com/s/piaok7wyu40i2pp/TewLauncher%20v0.01.rar">TEW Launcher v0.01 (11/30/2014)</a>
 </div>
