--- a/WpfUI/Pages/MyWordPage.xaml
+++ b/WpfUI/Pages/MyWordPage.xaml
@@ -7,11 +7,23 @@
       d:DesignHeight="600" d:DesignWidth="800"
 	Title="MyWordPage" Loaded="Page_Loaded">
 
-    <Grid>
-        <DataGrid x:Name="DataGridWords" HorizontalAlignment="Left" Margin="10,102,0,0" VerticalAlignment="Top" Height="393" Width="763"  Background="#FF514949" FontSize="14" FontFamily="Comic Sans MS" MouseDoubleClick="DataGridWords_MouseDoubleClick"/>
-        <Label x:Name="LabelMyWords" Content="My words" HorizontalAlignment="Left" Margin="211,10,0,0" VerticalAlignment="Top" Width="468" Height="65" FontFamily="Cooper Black" FontSize="48"/>
-        <Grid.Background>
-            <ImageBrush ImageSource ="/Images/bg.jpg"></ImageBrush>
-        </Grid.Background>
-    </Grid>
+	<Grid>
+		<DataGrid ItemsSource="{Binding WordsData}" AutoGenerateColumns="False" x:Name="DataGridWords" HorizontalAlignment="Left" Margin="10,102,0,0" VerticalAlignment="Top" Height="393" Width="763"  Background="#FF514949" FontSize="14" FontFamily="Comic Sans MS" MouseDoubleClick="DataGridWords_MouseDoubleClick">
+			<DataGrid.Columns>
+				<DataGridTextColumn Header="English" Binding="{Binding English}" />
+				<DataGridTextColumn Header="Russian" Binding="{Binding Russian}" />
+				<DataGridTextColumn Header="Level" Binding="{Binding Level}" />
+				<DataGridTextColumn Header="Answer Count" Binding="{Binding AnswerCount}" />
+				<DataGridTextColumn Header="Fail Answer Count" Binding="{Binding FailAnswerCount}" />
+				<DataGridTextColumn Header="Update Date" Binding="{Binding UpdateDate}" />
+				<DataGridTextColumn Header="Example" Binding="{Binding Example}" />
+			</DataGrid.Columns>
+
+		</DataGrid>
+		<Label x:Name="LabelMyWords" Content="My words" HorizontalAlignment="Left" Margin="211,10,0,0" VerticalAlignment="Top" Width="468" Height="65" FontFamily="Cooper Black" FontSize="48"/>
+
+		<Grid.Background>
+			<ImageBrush ImageSource ="/Images/bg.jpg"></ImageBrush>
+		</Grid.Background>
+	</Grid>
 </Page>
