--- a/TewCloud/Views/Tew/Learning.cshtml
+++ b/TewCloud/Views/Tew/Learning.cshtml
@@ -1,35 +1,33 @@
-﻿@{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+﻿
+@{
+    ViewBag.Title = "Learning";
+    Layout = "~/Views/Shared/_LearningLayout.cshtml";
 }
 
-<!-- ANGULAR SETUP -->
-
-<!-- 1. Load libraries -->
-<!-- Polyfill(s) for older browsers -->
-
+<!-- ANGULAR JS 2
 <script src="~/Scripts/AngularJS/node_modules/core-js/client/shim.min.js"></script>
 <script src="~/Scripts/AngularJS/node_modules/zone.js/dist/zone.js"></script>
 <script src="~/Scripts/AngularJS/node_modules/reflect-metadata/temp/Reflect.js"></script>
 <script src="~/Scripts/AngularJS/node_modules/systemjs/dist/system.src.js"></script>
+-->
 
-<!-- 2. Configure SystemJS -->
+<!-- INIT SCRIPTS -->
 <script src="~/Scripts/AngularJS/systemjs.config.js"></script>
 <script>
     var main = '@Url.Content("~/Scripts/AngularJS/app/js/main.js")';
-
     System.import(main).catch(function (err)
     {
         console.error(err);
     });
 </script>
+<!-- END OF INIT SCRIPTS -->
 
-<!-- END OF SETUP -->
-<h2>Index</h2>
-
-<div class="visible-desktop">
+<div class="visible-desktop body-margin-left">
+    DESKTOP
+    @Html.Partial("LearningDesktop/_MainDesktopPage")
     <my-app> LOADINFG </my-app>
 </div>
 <div class="visible-phone visible-tablet">
-    <div> MOBILE </div>
+    PHONE
+    @Html.Partial("LearningPhone/_MainPhonePage")
 </div>
