--- a/TewCloud/Views/Shared/LearningDesktop/_MainDesktopPage.cshtml
+++ b/TewCloud/Views/Shared/LearningDesktop/_MainDesktopPage.cshtml
@@ -1,4 +1,6 @@
 ﻿<div>
+    <roter-outlet></roter-outlet>
     <h1>MAIN DESKTOP PAGE</h1>
-
+    <a routerLink="/main-menu" routerLinkActive="active">MAIN menu</a>
 </div>
+<main-menu></main-menu>
