--- a/TewCloud/Scripts/AngularJS/app/templates/app.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/app.html
@@ -1,9 +1,5 @@
-﻿<h1>Template</h1>
-<h2>My favorite skill is: {{myskills}}</h2>
-<p>Skill:</p>
-<ul>
-    <li *ngFor="let skl of skills">
-        {{ skl }}
-    </li>
-</ul>
-<router-outlet></router-outlet>
+﻿<h1>Tew main page</h1>
+
+<div id="container">
+    <router-outlet></router-outlet>
+</div>
