--- a/TewCloud/Views/Shared/LearningDesktop/_MainDesktopPage.cshtml
+++ b/TewCloud/Views/Shared/LearningDesktop/_MainDesktopPage.cshtml
@@ -1,6 +1,3 @@
-﻿<div>
-    <roter-outlet></roter-outlet>
-    <h1>MAIN DESKTOP PAGE</h1>
-    <a routerLink="/main-menu" routerLinkActive="active">MAIN menu</a>
-</div>
-<main-menu></main-menu>
+﻿<h1>Desktop</h1>
+
+<my-app></my-app>
