--- a/TewCloud/Scripts/AngularJS/app/templates/app.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/app.html
@@ -1,10 +1,13 @@
-﻿<h1>Tew main page</h1>
+﻿<div class="center-block">
+    <h1>Tew main page</h1>
 
-<div id="tabs">
-    <a [routerLink]="['']">My words</a>
-    <a [routerLink]="['add-word']">Add word</a>
-</div>
+    <div id="tabs">
+        <a class="btn btn-info" routerLink="/">Home</a>
+        <a class="btn btn-default" routerLink="/add-word" routerLinkActive="btn-success">Add word</a>
+        <a class="btn btn-default" routerLink="/my-words" routerLinkActive="btn-success">My words</a>
+    </div>
 
-<div id="container">
-    <router-outlet></router-outlet>
+    <div id="container">
+        <router-outlet></router-outlet>
+    </div>
 </div>
