--- a/TewCloud/Views/Shared/_Layout.cshtml
+++ b/TewCloud/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </head>
-<body>
+<body class="main-body">
     <div class="row">
         @RenderBody()
     </div>
