--- a/TewCloud/Scripts/AngularJS/app/templates/app.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/app.html
@@ -1,13 +1,15 @@
-﻿<div class="center-block">
-    <h1>Tew main page</h1>
+﻿<div>
+    <div class="center-block" style="background-color: wheat; padding: 20px;">
+        <h1>Tew main page</h1>
 
-    <div id="tabs">
-        <a class="btn btn-info" routerLink="/">Home</a>
-        <a class="btn btn-default" routerLink="/add-word" routerLinkActive="btn-success">Add word</a>
-        <a class="btn btn-default" routerLink="/my-words" routerLinkActive="btn-success">My words</a>
+        <div id="tabs">
+            <a class="btn btn-info" routerLink="/">Home</a>
+            <a class="btn btn-default" routerLink="/add-word" routerLinkActive="btn-success">Add word</a>
+            <a class="btn btn-default" routerLink="/my-words" routerLinkActive="btn-success">My words</a>
+        </div>
     </div>
 
-    <div id="container">
+    <div id="route-container">
         <router-outlet></router-outlet>
     </div>
 </div>
