--- a/TewCloud/Scripts/AngularJS/app/templates/app.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/app.html
@@ -6,6 +6,7 @@
             <a class="btn btn-info" routerLink="/">Home</a>
             <a class="btn btn-default" routerLink="/add-word" routerLinkActive="btn-success">Add word</a>
             <a class="btn btn-default" routerLink="/my-words" routerLinkActive="btn-success">My words</a>
+            <a class="btn btn-default" routerLink="/picker-test" routerLinkActive="btn-success">Picker test</a>
         </div>
     </div>
 
