--- a/TewCloud/Scripts/AngularJS/app/templates/pickerTest.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/pickerTest.html
@@ -35,7 +35,7 @@
         <!-- result -->
         <div class="col-md-5">
             <div [hidden]="!resultMessage">
-                <h1>{{resultMessage}}</h1>
+                <div>{{resultMessage}}</div>
                 <button (click)="setNextTest()">Next</button>
             </div>
         </div>
