--- a/TewCloud/Scripts/AngularJS/app/templates/addWord.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/addWord.html
@@ -1,5 +1,5 @@
 <div class="center-block">
-    <h1 style="margin-bottom:100px"> Add word</h1>
+    <h3>Add word</h3>
 
     <span class="label">English word:</span>
     <br />
