--- a/TewCloud/Views/Tew/Learning.cshtml
+++ b/TewCloud/Views/Tew/Learning.cshtml
@@ -22,10 +22,11 @@
 </script>
 <!-- END OF INIT SCRIPTS -->
 
-<div class="visible-desktop body-margin-left">
-    @Html.Partial("LearningDesktop/_MainDesktopPage")
+<div>
+    <my-app></my-app>
+</div>
+
+@*<div class="visible-desktop">
 </div>
 <div class="visible-phone visible-tablet">
-    PHONE
-    @Html.Partial("LearningPhone/_MainPhonePage")
-</div>
+</div>*@
