--- a/TewCloud/Scripts/AngularJS/app/templates/home.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/home.html
@@ -1,2 +1,12 @@
-﻿<h1> Home </h1>
+﻿<div class="visible-desktop">
+    <h1> Home </h1>
+</div>
 
+<!-- mobile -->
+<div class="visible-phone visible-tablet">
+    <ul style="background-color:orange">
+        <li><a routerLink="/add-word">Add word</a></li>
+        <li><a routerLink="/my-words">My words</a></li>
+        <li><a routerLink="/picker-test">Picker test</a></li>
+    </ul>
+</div>
