--- a/TewCloud/Scripts/AngularJS/app/templates/myWords.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/myWords.html
@@ -3,30 +3,57 @@
 <div>    
     <div [hidden]="loaded">LOADING...</div>
 
-    <table class="table table-hover" [hidden]="!loaded">
-        <thead>
-            <tr>
-                <th></th>
-                <th>English</th>
-                <th>Russian</th>
-                <th>Level</th>
-                <th>Answer count</th>
-                <th>Fail count</th>
-                <th>Example</th>
-            </tr>
-        </thead>
-        <tbody *ngFor="let word of userWords.Words;">
-            <tr [hidden]="word.Hidden">
-                <td>
-                    <img class="cursor-pointer" (click)="removeWord(word)" src="/Scripts/AngularJS/app/images/delete.png" style="height: 30px" />
-                </td>
-                <td>{{word.English}}</td>
-                <td>{{word.Russian}}</td>
-                <td>{{word.Level}}</td>
-                <td>{{word.AnswerCount}}</td>
-                <td>{{word.FailAnswerCount}}</td>
-                <td>{{word.Example}}</td>
-            </tr>
-        </tbody>
-    </table>
+    <!-- desctop -->
+    <div class="visible-desktop">
+        <table class="table table-hover" [hidden]="!loaded">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>English</th>
+                    <th>Russian</th>
+                    <th>Level</th>
+                    <th>Answer count</th>
+                    <th>Fail count</th>
+                    <th>Example</th>
+                </tr>
+            </thead>
+            <tbody *ngFor="let word of userWords.Words;">
+                <tr [hidden]="word.Hidden">
+                    <td>
+                        <img class="cursor-pointer" (click)="removeWord(word)" src="/Scripts/AngularJS/app/images/delete.png" style="height: 30px" />
+                    </td>
+                    <td>{{word.English}}</td>
+                    <td>{{word.Russian}}</td>
+                    <td>{{word.Level}}</td>
+                    <td>{{word.AnswerCount}}</td>
+                    <td>{{word.FailAnswerCount}}</td>
+                    <td>{{word.Example}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <!-- mobile -->
+    <div class="visible-phone visible-tablet">
+        <table class="table table-hover" [hidden]="!loaded">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>English</th>
+                    <th>Russian</th>
+                    <th>Level</th>
+                </tr>
+            </thead>
+            <tbody *ngFor="let word of userWords.Words;">
+                <tr [hidden]="word.Hidden">
+                    <td>
+                        <img class="cursor-pointer" (click)="removeWord(word)" src="/Scripts/AngularJS/app/images/delete.png" style="height: 30px" />
+                    </td>
+                    <td>{{word.English}}</td>
+                    <td>{{word.Russian}}</td>
+                    <td>{{word.Level}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
