--- a/TewCloud/Scripts/AngularJS/app/templates/home.html
+++ b/TewCloud/Scripts/AngularJS/app/templates/home.html
@@ -3,10 +3,15 @@
 </div>
 
 <!-- mobile -->
-<div class="visible-phone visible-tablet">
-    <ul style="background-color:orange">
-        <li><a routerLink="/add-word">Add word</a></li>
-        <li><a routerLink="/my-words">My words</a></li>
-        <li><a routerLink="/picker-test">Picker test</a></li>
-    </ul>
+<div class="visible-phone visible-tablet center-block">
+    <div class="learning-main-background">
+        <a class="mobile-text" routerLink="/add-word">Add word</a>
+        <br/>
+
+        <a class="mobile-text" routerLink="/my-words">My words</a>
+        <br/>
+
+        <a class="mobile-text" routerLink="/picker-test">Picker test</a>
+        <br/>
+    </div>
 </div>
